# jupyterlab-blockly

./: .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  Untitled.ipynb  install.json  lerna.json  package-lock.json  package.json  pyproject.toml  setup.py  test.json  tsconfig.eslint.json  tsconfig.json
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml
binder/: environment.yml  postBuild
docs/: blockly_editor.md  blockly_files.md  build-environment.yml  conf.py  environment.yml  example.jpblockly  examples.md  functions.jpblockly  index.rst  installation.md  jupyter-lite.json  jupyterlab_integration.md  jupyterlite_config.json  kernels.md  logic.jpblockly  loops.jpblockly  other_extensions.md  requirements.txt  toolbox.md
examples/: functions.jpblockly  logic.jpblockly  text_and_lists.jpblockly
jupyterlab_blockly/: _version.py
patches/: @jupyterlab+codeeditor+3.3.4.patch  @jupyterlab+codeeditor+3.6.3.patch
scripts/: bump-version.py
src/: factory.ts  icons.ts  index.ts  layout.ts  manager.ts  svg.d.ts  token.ts  utils.ts  widget.ts
src/niryo/: niryo_one_python_generators.js
src/toolbar/: generator.tsx  index.ts
style/: base.css
