[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.4"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_blockly/labextension/static/style.js"]
ensured-targets = ["jupyterlab_blockly/labextension/static/style.js", "jupyterlab_blockly/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyterlab_blockly/labextension/**", "packages/**", "assets/**", "lerna.json", "yarn.lock", ".*", "package-lock.json", "docs/**"]

[tool.jupyter-releaser.hooks]
before-bump-version = ["python -m pip install jupyterlab~=3.4"]
before-build-npm = ["python -m pip install jupyterlab", "jlpm"]

[tool.jupyter-releaser.options]
version-cmd = "python scripts/bump-version.py --force"
